@startuml

title __SEARCH's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace search {
          class com.pis.buy2gether.usecases.home.home.search.SearchFragment {
              + onCreateView()
              + onDestroyView()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace search {
          class com.pis.buy2gether.usecases.home.home.search.SearchViewModel {
              - mText : MutableLiveData<String>
              + SearchViewModel()
              {static} + getGrupByName()
              + getText()
          }
        }
      }
    }
  }
  

  com.pis.buy2gether.usecases.home.home.search.SearchFragment -up-|> androidx.fragment.app.Fragment
  com.pis.buy2gether.usecases.home.home.search.SearchFragment o-- com.pis.buy2gether.databinding.FragmentSearchBinding : binding
  com.pis.buy2gether.usecases.home.home.search.SearchFragment o-- com.pis.buy2gether.usecases.home.home.search.SearchViewModel : searchViewModel
  com.pis.buy2gether.usecases.home.home.search.SearchViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
